--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
     "@react-icons/all-files": "^4.1.0",
     "@telefonica/mistica": "^16.32.0",
     "axios": "^1.10.0",
     "emailjs-com": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
